Added portfolio to school opdrachten

--- a/AJAX/mywork.html
+++ b/AJAX/mywork.html
@@ -191,6 +191,51 @@
             </div>
           <div class="col-1"></div>
         </div>
+
+        <div class="row">
+          <div class="col-1"></div>
+            <div class="col-10">
+              <!-- Contains one project -->
+              <article>
+              <header>
+                <h2 class="col-12">Portfolio</h2>
+                <div class="col-m-3 col-0"></div>
+                <img src="file/portfolio.png" alt="portfolio opdracht" class="col-4 col-m-6"/>
+                <div class="col-m-3 col-0"></div>
+                <h3 class="col-8">School opdracht</h3>
+              </header>
+              <div class="col-8">
+                <p>
+                  Van mijn programmeer docent kreeg ik de opdracht om een portfolio te maken.
+                  <br />
+                  Voordat we begonnen met het maken van mijn portfolio moest er eerst een onderzoek gebeuren. Uit dat onderzoek moest je kunnen herleiden
+                  welke belangrijke elementen op een portfolio staan.
+                  <br />
+                  Nadat het onderzoek voor het portfolio moesten we het volgende gaan maken: sitemap, een onderzoek voor een ontwikkelomgeving die overeen komt met de productie omgeving en een
+                  overzicht met welke content ik wil laten zien op mijn portfolio
+                  <br />
+                  Nu ik had bedacht welke content en welke elementen ik wil hebben staan op mijn portfolio, moest ik aan de slag met een Mock-up. Voor de responsivenes van mijn portfolio heb ik gebruik gemaakt van GRID.
+                  <br />
+                  Nadat ik dat allemaal heb gedaan was het tijd om mijn Mock-up's om te zetten naar HTML en CSS en te vullen met content.
+                </p>
+                <br />
+                <br />
+                <summary>
+                  <ul>
+                    <li>Schoolopdracht: Portfolio</li>
+                    <li>Docent: Dunk</li>
+                    <li>Programmeertalen: HTML / CSS / JS / PHP</li>
+                  </ul>
+                  <br />
+                  <br />
+                  <a target="_blank" href="https://peter-romijn.nl">Portfolio</a>
+                </summary>
+              </div>
+              </article>
+            </div>
+          <div class="col-1"></div>
+        </div>
+
       </sections>
 
 
