--- a/AJAX/mywork.html
+++ b/AJAX/mywork.html
@@ -254,59 +254,59 @@
             <header>
               <div class="col-12 center-text"><h2>Boter, kaas en eieren</h2></div>
             </header>
-            <div class="col-m-3 col-0"></div>
-            <p class="col-12"><summary>Boter kaas en eieren, was een school opdracht om verder te leren met jQuery.</summary></p>
-            <div class="col-m-3 col-0"></div>
+            <div class="col-m-3 col-0">&nbsp;</div>
+            <p class="col-12"><summary class="col-12">Boter kaas en eieren, was een school opdracht om verder te leren met jQuery.</summary></p>
+            <div class="col-m-3 col-0">&nbsp;</div>
             <a class="col-m-6 col-12" target="_blank" href="https://github.com/peter-4A5A/boter-kaas-en-eieren">Github</a>
-            <div class="col-m-3 col-0"></div>
+            <div class="col-m-3 col-0">&nbsp;</div>
           </article>
 
           <article class="col-3 col-m-6 project">
-            <div class="col-m-3 col-0"></div>
+            <div class="col-m-3 col-0">&nbsp;</div>
             <div class="col-12 col-m-6">
               <img src="file/wordpress-sbd.png" alt="SameBestDevelopment thema in wordpress" class="experimentHeight">
             </div>
-            <div class="col-m-3 col-0"></div>
+            <div class="col-m-3 col-0">&nbsp;</div>
             <header>
               <div class="col-12 center-text"><h2>Wordpress theme</h2></div>
             </header>
-            <div class="col-m-3 col-0"></div>
-            <p class="col-12"><summary>Het thema van de samebestdevelopment website gemaakt in een Wordpress thema.</summary></p>
-            <div class="col-m-3 col-0"></div>
+            <div class="col-m-3 col-0">&nbsp;</div>
+            <p class="col-12"><summary class="col-12">Het thema van de samebestdevelopment website gemaakt in een Wordpress thema.</summary></p>
+            <div class="col-m-3 col-0">&nbsp;</div>
             <a class="col-m-6 col-12" target="_blank" href="https://github.com/peter-4A5A/SameBestDevelopment-wordpress-theme">Github</a>
-            <div class="col-m-3 col-0"></div>
+            <div class="col-m-3 col-0">&nbsp;</div>
           </article>
 
           <article class="col-3 col-m-6 project">
-            <div class="col-m-3 col-0"></div>
+            <div class="col-m-3 col-0">&nbsp;</div>
             <div class="col-12 col-m-6">
               <img src="file/type.gif" class="experimentHeight">
             </div>
-            <div class="col-m-3 col-0"></div>
+            <div class="col-m-3 col-0">&nbsp;</div>
             <header>
               <div class="col-12 center-text"><h2>Type project</h2></div>
             </header>
-            <div class="col-m-3 col-0"></div>
-            <p class="col-12"><summary>Een javascript applicatie die automatisch typt.</summary></p>
-            <div class="col-m-3 col-0"></div>
+            <div class="col-m-3 col-0">&nbsp;</div>
+            <p class="col-12"><summary class="col-12">Een javascript applicatie die automatisch typt.</summary></p>
+            <div class="col-m-3 col-0">&nbsp;</div>
             <a class="col-m-6 col-12" target="_blank" href="http://typer.samebestdevelopment.nl">Bekijk het project</a>
-            <div class="col-m-3 col-0"></div>
+            <div class="col-m-3 col-0">&nbsp;</div>
           </article>
 
           <article class="col-3 col-m-6 project">
-            <div class="col-m-3 col-0"></div>
+            <div class="col-m-3 col-0">&nbsp;</div>
             <div class="col-12 col-m-6">
               <img src="file/js.png" class="experimentHeight">
             </div>
-            <div class="col-m-3 col-0"></div>
+            <div class="col-m-3 col-0">&nbsp;</div>
             <header>
               <div class="col-12 center-text"><h2>Create field</h2></div>
             </header>
-            <div class="col-m-3 col-0"></div>
-            <p class="col-12"><summary>Een javascript experiment die de style aanpast van een element.</summary></p>
-            <div class="col-m-3 col-0"></div>
+            <div class="col-m-3 col-0">&nbsp;</div>
+            <p class="col-12"><summary class="col-12">Een javascript experiment die de style aanpast van een element.</summary></p>
+            <div class="col-m-3 col-0">&nbsp;</div>
             <a class="col-m-6 col-12" target="_blank" href="http://create-field.samebestdevelopment.nl">Bekijk het project</a>
-            <div class="col-m-3 col-0"></div>
+            <div class="col-m-3 col-0">&nbsp;</div>
           </article>
         </div>
         </sections>
