--- a/AJAX/index.html
+++ b/AJAX/index.html
@@ -50,7 +50,7 @@
                 <li><a href="#aboutme">Over mij</a></li>
                 <li><a href="#mywork">Projecten</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a target="_blank" class="githubLink" href="https://github.com/peter-4A5A"><img style="width: 0.9em;" src="file/github.png"/></a></li>
+                <li class="gitFullWith"><a target="_blank" class="githubLink" href="https://github.com/peter-4A5A"><img style="width: 0.9em;" src="file/github.png"/></a></li>
             </ul>
         </div>
       </nav>
