Change about tekst

--- a/AJAX/aboutme.html
+++ b/AJAX/aboutme.html
@@ -13,7 +13,11 @@
 
       <div class="col-2"></div>
       <div class="col-8">
-        <p><strong>Mijn naam is Peter Romijn, woonachtig in Tiel en geboren op: 22 juli 1998. Ik ben student bij ROC Midden Nederland als Applicatie- en mediaontwikkeling. En werkzaam bij <a target="_blank" href="http://beeinteractive.nl">BeeInteractive</a>.</strong>
+        <p>
+          <strong>
+            Mijn naam is Peter Romijn, ik beheers verschillende programmeertalen: HTML, CSS, Javascript, PHP en SQL. Ik ben woonachtig in Tiel, geboren op:
+            22 juli 1998, student bij ROC Midden Nederland Applicatie- en mediaontwikkeling. En werkzaam bij <a target="_blank" href="http://beeinteractive.nl">BeeInteractive</a>.
+          </strong>
           <br />
           <br />
           Al op jonge leeftijd (4 jaar) had ik al intresse in de computer. Toen ik 4 was, was mijn moeder verbaast dat ik een spelletje kon installeren.
