--- a/AJAX/mywork.html
+++ b/AJAX/mywork.html
@@ -247,9 +247,7 @@
           </header>
           <article class="col-3 col-m-6 project">
             <div class="col-m-3 col-0"></div>
-            <div class="col-12 col-m-6">
-              <img src="file/butter-cheese-and-eggs.jpg" alt="Boter, kaas en eieren" class="experimentHeight">
-            </div>
+              <img src="file/butter-cheese-and-eggs.jpg" alt="Boter, kaas en eieren" class="col-12 col-m-6">
             <div class="col-m-3 col-0"></div>
             <header>
               <div class="col-12 center-text"><h2>Boter, kaas en eieren</h2></div>
@@ -263,9 +261,7 @@
 
           <article class="col-3 col-m-6 project">
             <div class="col-m-3 col-0">&nbsp;</div>
-            <div class="col-12 col-m-6">
-              <img src="file/wordpress-sbd.png" alt="SameBestDevelopment thema in wordpress" class="experimentHeight">
-            </div>
+              <img src="file/wordpress-sbd.png" alt="SameBestDevelopment thema in wordpress" class="col-12 col-m-6">
             <div class="col-m-3 col-0">&nbsp;</div>
             <header>
               <div class="col-12 center-text"><h2>Wordpress theme</h2></div>
@@ -279,9 +275,7 @@
 
           <article class="col-3 col-m-6 project">
             <div class="col-m-3 col-0">&nbsp;</div>
-            <div class="col-12 col-m-6">
-              <img src="file/type.gif" class="experimentHeight">
-            </div>
+              <img src="file/type.gif" class="col-12 col-m-6">
             <div class="col-m-3 col-0">&nbsp;</div>
             <header>
               <div class="col-12 center-text"><h2>Type project</h2></div>
@@ -295,9 +289,7 @@
 
           <article class="col-3 col-m-6 project">
             <div class="col-m-3 col-0">&nbsp;</div>
-            <div class="col-12 col-m-6">
-              <img src="file/js.png" class="experimentHeight">
-            </div>
+              <img src="file/js.png" class="col-12 col-m-6">
             <div class="col-m-3 col-0">&nbsp;</div>
             <header>
               <div class="col-12 center-text"><h2>Create field</h2></div>
