--- a/AJAX/index.html
+++ b/AJAX/index.html
@@ -7,7 +7,7 @@
     <title id="title">Portfolio - Peter Romijn</title>
   <meta name="author" content="Peter Romijn">
   <meta name="description" content="Portfolio Peter Romijn">
-  <meta name="keywords" content="Peter, Romijn, portfolio, webdeveloper, Tiel">
+  <meta name="keywords" content="Peter, Romijn, portfolio, webdeveloper, Tiel, html, css, Javascript, php, sql">
   <meta name="application-name" content="&nbsp;"/>
   <meta name="msapplication-TileColor" content="#FFFFFF" />
   <meta name="msapplication-TileImage" content="icon/mstile-144x144.png" />
