--- a/AJAX/aboutme.html
+++ b/AJAX/aboutme.html
@@ -15,25 +15,25 @@
       <div class="col-8">
         <p>
           <strong>
-            Mijn naam is Peter Romijn, ik beheers verschillende programmeertalen: HTML, CSS, Javascript, PHP en SQL. Ik ben woonachtig in Tiel, geboren op:
-            22 juli 1998, student bij ROC Midden Nederland Applicatie- en mediaontwikkeling. En werkzaam bij <a target="_blank" href="http://beeinteractive.nl">BeeInteractive</a>.
+            Mijn naam is Peter Romijn. Ik beheers verschillende programmeertalen; HTML, CSS, Javascript, PHP en SQL. Ik ben woonachtig in Tiel, geboren op
+            22 juli in 1998, student bij ROC Midden Nederland Applicatie- en mediaontwikkeling en werkzaam bij <a target="_blank" href="http://beeinteractive.nl">BeeInteractive</a>.
           </strong>
           <br />
           <br />
-          Al op jonge leeftijd (4 jaar) had ik al intresse in de computer. Toen ik 4 was, was mijn moeder verbaast dat ik een spelletje kon installeren.
-          Ze dacht dat het eigenlijk gewoon was dat iemand van 4 dat kon,
-          totdat mijn moeder het tegen andere ouders vertelde. Kwam mijn moeder erachter dat het uniek is dat kinderen dat kunnen. En zo bleef ik mij ontwikkelen.
-          Op mijn 6de begon ik met het branden van spelletjes op CD's, weer een grote stap als een "klein" kind om een ICT'er te worden.
+          Al op jonge leeftijd had ik al intresse in computers. Toen ik vier was, was mijn moeder verbaasd dat ik een spelletje kon installeren.
+          Ze dacht dat het wel gewoon was dat iemand van vier jaar dat kon,
+          totdat ze het tegen andere ouders vertelde. Toen kwam ze erachter dat het eigenlijk uniek is dat een kind dat op die leeftijd kan. Steeds verder begon ik mezelf te ontwikkelen binnen de ICT-wereld.
+          Op mijn zesde begon ik met het branden van spelletjes op CD'. Weer een grote stap als een kind om een ICT'er te worden.
           <br />
-          Op mijn 10de begon ik met het hosten van mijn eigen MineCraft servers te hosten! En zo heb ik toen uiteindelijk SameBestServer gestart!
-          Een hobby project om een minecraft server te maken! Onder SameBestServer heb ik vele servers gemaakt (MineZ, survival, minigames, pretpark, Survivalen met een storyline en LingeCraft).
+          Op mijn tiende begon ik met het hosten van mijn eigen MineCraft servers! Zo heb ik toen uiteindelijk SameBestServer gestart!
+          Een hobby project om verschillende minecraft servers te maken! Onder SameBestServer heb ik vele servers gemaakt (MineZ, survival, minigames, pretpark, Survivalen met een storyline en LingeCraft).
           <br />
-          Toen ik steeds verder groeide in mijn ICT kennis en ik ongeveer 13 jaar was had ik mijn eerste Wordpress website gemaakt. Deze website was om te testen wat ik allemaal met Wordpress kon doen.
-          En dat was een hele hoop zonder dat ik veel kennis had kwam ik aardig uit te voeten.
-          Zo bleef ik groeien ook op de middelbare school. En kreeg ik basis kennis van programmeren. Daar wilde ik mee verder groeien en koos ik voor de opleiding: applicatie- en mediaontwikkeling
-          op het ROC Midden Nederland
+          Toen ik steeds verder groeide in mijn ICT kennis en ongeveer dertien jaar was had ik mijn eerste Wordpress website gemaakt. Deze website was om te testen wat ik allemaal met Wordpress kon doen, dat was een hele hoop. Zonder dat ik veel kennis had, kwam ik er aardig mee uit te voeten.
+          Op deze manier bleef ik groeien, ook op de middelbare school bij het vak ICT kwam ik erachter dat ik me wilde verdiepen in het programmeren. 
+	  Daar wil ik verder in leren. Dus koos ik voor de opleiding: applicatie- en mediaontwikkeling
+          op het ROC Midden Nederland.
           <br>
-          Op school krijg ik les in de volgende talen
+          Op school krijg ik les in de volgende talen;
           <ul class="tab">
             <li>  HTML</li>
             <li>  CSS</li>
