--- a/AJAX/contact.html
+++ b/AJAX/contact.html
@@ -18,8 +18,8 @@
             <button type="button" class="div_button col-4 col-m-5" onclick="sendMail();">Versturen</button>
             <div class="col-8 col-m-7">
             </div>
+            <div class="col-12" id="mailstatus"></div>
           </form>
-
           <div class="col-6">
             <img src="file/contact-icon.png" alt="contact icon" class="col-2">
             <address>
