Changed site title

--- a/index-content.html
+++ b/index-content.html
@@ -4,7 +4,8 @@
   <div class="col-4 col-m-3"></div>
 
   <header>
-    <h1 class="col-12 center-text noSpace">Peter Romijn - portfolio</h1>
+    <h1 class="col-12 center-text noSpace">Peter Romijn</h1>
+    <h2 class="col-12 center-text noSpace">Webdeveloper</h2>
   </header>
   <div style="padding: 0;" class="col-12 center-text"><div class="center-text col-12" id="text">&nbsp;</div><div id="blinker">&nbsp;</div></div>
 </div>
