--- a/mywork.html
+++ b/mywork.html
@@ -228,7 +228,7 @@
                   </ul>
                   <br />
                   <br />
-                  <a target="_blank" href="https://peter-romijn.nl">Portfolio</a>
+                  <a target="_blank" href="https://github.com/peter-4A5A/Portfolio">Github</a>
                 </summary>
               </div>
               </article>
