--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <meta name="robots" content="noindex">
+  <meta name="robots" content="index, follow">
     <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
     <title id="title">Portfolio - Peter Romijn</title>
