Changed file size

--- a/index-content.html
+++ b/index-content.html
@@ -1,7 +1,9 @@
 <div class="row">
-  <div class="col-4 col-m-3"></div>
-  <img class="col-4 col-m-6 round_picture" alt="Peter Romijn" src="file/peter-romijn.jpeg" alt="">
-  <div class="col-4 col-m-3"></div>
+  <!-- <div class="col-5 col-m-3"></div> -->
+  <div class="col-12 center-text">
+    <img class="round_picture" style="width: 300px;" alt="Peter Romijn" src="file/peter-romijn.jpeg" alt="">
+  </div>
+  <!-- <div class="col-5 col-m-3"></div> -->
 
   <header>
     <h1 class="col-12 center-text noSpace">Peter Romijn</h1>
