--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="row">
         <div class="col-4 col-m-3"></div>
         <a href="#">
-          <img src="file/samebestdevelopment-logo.png" alt="logo samebestdevelopment" class="col-4 col-m-6" />
+          <img src="file/samebestdevelopment-logo.png" alt="logo samebestdevelopment" style="padding: 0.5em;" class="col-4 col-m-6" />
         </a>
         <div class="col-4 col-m-3"></div>
       </div>
