On load we will see the default index

--- a/index.html
+++ b/index.html
@@ -72,6 +72,19 @@
 
       <main>
         <div id="content">
+          <div class="row">
+            <!-- <div class="col-5 col-m-3"></div> -->
+            <div class="col-12 center-text">
+              <img class="round_picture" style="width: 300px;" alt="Peter Romijn" src="file/peter-romijn.jpeg" alt="">
+            </div>
+            <!-- <div class="col-5 col-m-3"></div> -->
+
+            <header>
+              <h1 class="col-12 center-text noSpace">Peter Romijn</h1>
+              <h2 class="col-12 center-text noSpace">Webdeveloper</h2>
+            </header>
+            <div style="padding: 0;" class="col-12 center-text"><div class="center-text col-12" id="text">&nbsp;</div><div id="blinker">&nbsp;</div></div>
+          </div>
         </div>
       </main>
 
