--- a/mywork.html
+++ b/mywork.html
@@ -236,6 +236,46 @@
           <div class="col-1"></div>
         </div>
 
+
+        <div class="row">
+          <div class="col-1"></div>
+            <div class="col-10">
+              <!-- Contains one project -->
+              <article>
+              <header>
+                <h2 class="col-12">Multiversum - webshop</h2>
+                <div class="col-m-3 col-0"></div>
+                <img src="https://mv.samebestserver.nl/file/site/logo.png" alt="Webshop multiversum logo" class="col-4 col-m-6"/>
+                <div class="col-m-3 col-0"></div>
+                <h3 class="col-8">School opdracht</h3>
+              </header>
+              <div class="col-8">
+                <p>
+                  De opdracht die we te horen kregen was alsvolgd:
+                  Er moet een webshop gemaakt worden voor VR-brillen, je werkt samen met 1 iemand en met de werkmethode: scrum.
+                  We moesten vervolgens een offerte maken voor onze klant. Na onze offerte gingen we op gesprek met onze klant om te achterhalen wat hij precies wilde.
+                  Na ons gesprek hebben we zijn behoefte omgezet in userstories. De klant heeft daarna 3 user stories uitgekozen om deze te realiseren. Voor elke sprint hadden we 2 weken de tijd, na een sprint gingen we het productie klaar product presenteren.
+                  Toen we 2 sprint hadden gerealiseerd zijn we de sprint hardening ingegaan. Hier hebben we de test database vervangen met de productie database, De code optimaliseren, en eventuele code depth verlossen.
+                </p>
+                <br />
+                <br />
+                <summary>
+                  <ul>
+                    <li>Schoolopdracht: Multiversum - webshop</li>
+                    <li>Docent: Dunk</li>
+                    <li>Programmeertalen: HTML / CSS / JavaScript / PHP</li>
+                    <li>Werkmethode: Scrum</li>
+                  </ul>
+                  <br />
+                  <br />
+                  <a target="_blank" href="https://mv.samebestserver.nl">Multiversum webshop</a>
+                </summary>
+              </div>
+              </article>
+            </div>
+          <div class="col-1"></div>
+        </div>
+
       </sections>
 
 
