Changed the file location of logo multiversum

--- a/mywork.html
+++ b/mywork.html
@@ -245,7 +245,7 @@
               <header>
                 <h2 class="col-12">Multiversum - webshop</h2>
                 <div class="col-m-3 col-0"></div>
-                <img src="https://mv.samebestserver.nl/file/site/logo.png" alt="Webshop multiversum logo" class="col-4 col-m-6"/>
+                <img src="file/multiversum.png" alt="Webshop multiversum logo" class="col-4 col-m-6"/>
                 <div class="col-m-3 col-0"></div>
                 <h3 class="col-8">School opdracht</h3>
               </header>
@@ -267,8 +267,11 @@
                     <li>Werkmethode: Scrum</li>
                   </ul>
                   <br />
-                  <br />
+                  <!-- <br />
                   <a target="_blank" href="https://mv.samebestserver.nl">Multiversum webshop</a>
+                  <br> -->
+                  </br>
+                  <a target="_blank" href="https://github.com/peter-4A5A/webshop-MVC">Github</a>
                 </summary>
               </div>
               </article>
