Added the kermis app

--- a/mywork.html
+++ b/mywork.html
@@ -2,6 +2,42 @@
         <div class="row">
           <sections>
           <h1 class="col-12 center-text">Projecten</h1>
+          <div class="row">
+            <div class="col-1"></div>
+              <div class="col-10">
+                <article>
+                <!-- Contains one project -->
+                <header>
+                  <h2 class="col-12">KermisWeert</h2>
+                  <div class="col-m-3 col-0"></div>
+                  <img src="file/kermis_weert_logo.png" alt="KermisWeert logo" class="col-4 col-m-6"/>
+                  <div class="col-m-3 col-0"></div>
+                  <h3 class="col-8">Mobile Development</h3>
+                </header>
+                <div class="col-8">
+                  <p>
+                    Voor E-tailors heb ik meegeholpen aan de app voor KermisWeert. Mijn taken waren tot het Deployen van en het helpen met debuggen van de app.<br>
+                  </p>
+                  <br />
+                  <br />
+                  <summary>
+                    <ul>
+                      <li>Project naam: Kermis Weert</li>
+                      <li>Rol: developer/debugger</li>
+                      <li>Teamgrootte: 4</li>
+                      <li>FrameWork: Ionic 3</li>
+                      <li>Programmeertalen: Javascript/Angular</li>
+                    </ul>
+                    <br />
+                    <br />
+                    <a target="_blank" href="https://itunes.apple.com/nl/app/kermisweert-2018/id1435582526">App Store</a>
+                    <a target="_blank" href="https://play.google.com/store/apps/details?id=io.kermisweert.com">Playstore</a>
+                  </summary>
+                </div>
+                </article>
+              </div>
+            <div class="col-1"></div>
+          </div>
           <div class="col-1"></div>
             <div class="col-10">
               <article>
