Added boulevard app

--- a/mywork.html
+++ b/mywork.html
@@ -38,6 +38,44 @@
               </div>
             <div class="col-1"></div>
           </div>
+          <div class="row">
+            <div class="col-1"></div>
+              <div class="col-10">
+                <article>
+                <!-- Contains one project -->
+                <header>
+                  <h2 class="col-12">Boulevard Nautique Roermond</h2>
+                  <div class="col-m-3 col-0"></div>
+                  <img src="file/boulevard-nautqiue-roermond-app.png" alt="Boulevard Nautique Roermond app logo" class="col-4 col-m-6"/>
+                  <div class="col-m-3 col-0"></div>
+                  <h3 class="col-8">Mobile Development</h3>
+                </header>
+                <div class="col-8">
+                  <p>
+                    Voor E-tailors heb ik de app voor Boulevard Noutique Roermond gemaakt.<br>
+                    Deze app maakt gebruik van iBeacon hierdoor verschijnen de boten waar je bij staat bovenaan je scherm.<br>
+                    Er is gekozen voor iBeacon in plaats van GPS aangezien de boten dagelijks verschuiven en daardoor GPS niet praktisch is.
+                    iBeacon is hiervoor veel nauwkeuriger.
+                  </p>
+                  <br />
+                  <br />
+                  <summary>
+                    <ul>
+                      <li>Project naam: Boulevard Nautique Roermond app</li>
+                      <li>Rol: head of development</li>
+                      <li>Teamgrootte: 1</li>
+                      <li>FrameWork: Ionic 3</li>
+                      <li>Programmeertalen: Javascript/Angular</li>
+                    </ul>
+                    <br />
+                    <br />
+                    <a target="_blank" href="https://itunes.apple.com/us/app/boulevard-nautique-roermond/id1401308233?mt=8">App Store</a>
+                  </summary>
+                </div>
+                </article>
+              </div>
+            <div class="col-1"></div>
+          </div>
           <div class="col-1"></div>
             <div class="col-10">
               <article>
