Added digimenulight site

--- a/mywork.html
+++ b/mywork.html
@@ -8,6 +8,43 @@
                 <article>
                 <!-- Contains one project -->
                 <header>
+                  <h2 class="col-12">Digi Menu Light website</h2>
+                  <div class="col-m-3 col-0"></div>
+                  <img src="file/digi-menu-light-site.png" alt="KermisWeert logo" class="col-4 col-m-6"/>
+                  <div class="col-m-3 col-0"></div>
+                  <h3 class="col-8">Web Development</h3>
+                </header>
+                <div class="col-8">
+                  <p>
+                    Voor Digi Menu heb ik een website bebouwd om voor nieuwe light systeem van hen.
+                    De website moest een webshop bevatten en een blog. Makkelijk doorzoekbaar en een overzichtelijke layout.
+                  </p>
+                  <br />
+                  <br />
+                  <summary>
+                    <ul>
+                      <li>Project naam: Digi Menu Light website</li>
+                      <li>Rol: developer</li>
+                      <li>Teamgrootte: 1</li>
+                      <li>CMS: Wordpress</li>
+                      <li>Programmeertalen: HTML, CSS, JavaScript en PHP</li>
+                    </ul>
+                    <br />
+                    <br />
+                    <a target="_blank" href="https://itunes.apple.com/nl/app/kermisweert-2018/id1435582526">App Store</a>
+                    <a target="_blank" href="https://play.google.com/store/apps/details?id=io.kermisweert.com">Playstore</a>
+                  </summary>
+                </div>
+                </article>
+              </div>
+            <div class="col-1"></div>
+          </div>
+          <div class="row">
+            <div class="col-1"></div>
+              <div class="col-10">
+                <article>
+                <!-- Contains one project -->
+                <header>
                   <h2 class="col-12">KermisWeert</h2>
                   <div class="col-m-3 col-0"></div>
                   <img src="file/kermis_weert_logo.png" alt="KermisWeert logo" class="col-4 col-m-6"/>
