--- a/mywork.html
+++ b/mywork.html
@@ -31,8 +31,7 @@
                     </ul>
                     <br />
                     <br />
-                    <a target="_blank" href="https://itunes.apple.com/nl/app/kermisweert-2018/id1435582526">App Store</a>
-                    <a target="_blank" href="https://play.google.com/store/apps/details?id=io.kermisweert.com">Playstore</a>
+                    <a target="_blank" href="https://digi-menu-light.nl/">Website</a>
                   </summary>
                 </div>
                 </article>
