Added flexbox school asignment

--- a/mywork.html
+++ b/mywork.html
@@ -274,6 +274,41 @@
               <!-- Contains one project -->
               <article>
               <header>
+                <h2 class="col-12">Flexbox - site</h2>
+                <div class="col-m-3 col-0"></div>
+                <img src="file/crossfit-flexbox.png" alt="Flexbox foto resultaat" class="col-4 col-m-6"/>
+                <div class="col-m-3 col-0"></div>
+                <h3 class="col-8">School opdracht</h3>
+              </header>
+              <div class="col-8">
+                <p>
+                  De opdracht was om een website te maken met het gebruik van Flexbox. Dit was nieuw voor mij aangezien ik nooit eerder had gewerkt met flexbox. Maar ook door middle van een checkbox een dropdown menu gemaakt en floating labels bij het formulier<br>
+                  Het resultaat is er in ieder geval wel!
+                </p>
+                <br />
+                <br />
+                <summary>
+                  <ul>
+                    <li>Schoolopdracht: Toegangspas</li>
+                    <li>Docent: De Ruiter</li>
+                    <li>Teamgrootte: 2</li>
+                    <li>Programmeertalen: HTML / CSS</li>
+                  </ul>
+                  <br />
+                  <br />
+                  <a target="_blank" href="https://webs1.peter-romijn.nl">Flexbox site</a>
+                </summary>
+              </div>
+              </article>
+            </div>
+          <div class="col-1"></div>
+        </div>
+        <div class="row">
+          <div class="col-1"></div>
+            <div class="col-10">
+              <!-- Contains one project -->
+              <article>
+              <header>
                 <h2 class="col-12">Toegangs pas</h2>
                 <div class="col-m-3 col-0"></div>
                 <img src="file/toegangspas.png" alt="Toegangs pas opdracht" class="col-4 col-m-6"/>
